# homeinfra

./: .gitignore  Chart.yaml  README.md  bacula-on-qnap_compose.yml  inventory.test.yml  inventory.vault.yml  inventory.yml  main.py  molecule  pyproject.toml  requirements.txt  requirements.yml  site.yml  values.yaml
charts/immich/: values.yaml
containers/bacula-dir/: Dockerfile
containers/bacula-sd/: Dockerfile
containers/ddns-updater/: docker-compose.yml
containers/onetime_pull/: Dockerfile  do_onetime_pull.sh  docker-compose.yml
containers/qnap-nas/: docker-compose.yml
containers/qnap-nas-setup/: Dockerfile  docker-compose.yml  domain.conf.j2  init-letsencrypt.py  init-letsencrypt.sh  initialize.conf.j2  production.conf.j2  requirements.txt
containers/wust_us_k8s/: .htaccess  Dockerfile  nginx.conf
group_vars/: all.yml  k8s.yml  k8s_control_plane.yml  k8s_nodes.yml  nas.yml
group_vars/all/: letsencrypt_staging_account_key.yml
host_vars/: belthasar.cluster.internal.wust.us.yml  control1.cluster.wust.us.yml  control2.cluster.wust.us.yml  control3.cluster.wust.us.yml  gaspar.cluster.internal.wust.us.yml  localhost.yml  melchior.cluster.internal.wust.us.yml  qnap.yml  worker1.cluster.wust.us.yml  worker2.cluster.wust.us.yml  worker3.cluster.wust.us.yml
k8s_manifests/: bacula-compose.yaml  calico.yaml  nas-postgresql.yaml  nginx-hello-world-deployment.yaml
templates/: NOTES.txt  _helpers.tpl  bitwarden_secret.yaml  deployment.yaml  hpa.yaml  ingress.yaml  persistent-volume.yaml  service.yaml  serviceaccount.yaml  storage-class.yaml
(+134 files in other folders)
