[project]
name = "homeinfra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=8.7.0",
    "bitwarden-sdk",
    "dnspython>=2.7.0",
    "ipaddress>=1.0.23",
    "openstacksdk>=4.7.1",
    "passlib>=1.7.4",
    "xmltodict>=1.0.2",
]

[tool.uv.sources]
bitwarden-sdk = { path = "../sdk-sm/languages/python" }
